// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text Renders \`text\` with default template 1`] = `
<div
  class="position-relative"
>
  <div>
    <div>
      <b>
        bold template
      </b>
    </div>
  </div>
</div>
`;

exports[`text Renders \`text\` with request template 1`] = `
<div
  class="position-relative"
>
  <div>
    <c-request-helper
      helper-id="request-helper-696d5f1d19c"
    />
  </div>
</div>
`;
